# comsen_challengecup

./: .dockerignore  .gitignore  DOCKER_USAGE.md  Dockerfile  FIXEDWING_FLIGHT_SUCCESS.md  README.md  README_VTOL.md  VTOL_SYSTEM_SUMMARY.md  advanced_fixedwing_flight.py  build_env.sh  check_environment.sh  docker-compose.yml  docker_start.sh  fish_install.yaml  fixedwing_auto_flight.py  fixedwing_control.py  git.bash  multi_target_flight.py  multirotor_control.py  problem.md  quick_start.sh  setup.sh  simple_fixedwing_flight.py  start_competition.sh  start_simulation.sh  start_yolo12.sh  test_camouflage_detector.py  test_closed_loop_control.py  test_flight_modes.py  test_image_capture_topic.py  test_mode_switching_detailed.py  test_multirotor_switching.py  test_position_control.py  test_precision_timeout.py  test_smart_pathfinding.py  test_takeoff_fix.py  test_tolerance_settings.py  test_vtol_condition.py  timeline_week2.md  vtol_control.py  (+6 more)
workspace/: CMakeLists.txt  README.md  RVIZ_IMAGE_GUIDE.md  fix_spawn_issue.sh  fixedwing_control_xtdrone.py  fixedwing_pseudo_control.py  get_person_positions.py  image_saver.py  labelme_to_yolo.py  launch_physical.sh  main.launch  package.xml  stages.md  start.sh  start_competition.sh  start_simulation_improved.sh  stop.sh  test_drone_control.py  virtual_rc.py
workspace/communication/: plane_teleport.py
workspace/drone_control/: DRONE_CONTROL_README.md  drone_control.py  fixedwing_mavros_direct.py  fixedwing_teleport.py  gazebo_teleport.py  image_capture.py  quick_check_positions.py
workspace/drone_control/communication/: multirotor_communication_enhanced.py
workspace/iris_control/: PID_CONTROL_README.md  drone_control.py  multirotor_control.py  test_visual_landing.py  vtol_Astar.py
workspace/landing_detection/: README.md  landing_detection  package.xml
workspace/landing_detection/launch/: red_detection.launch
workspace/landing_detection/scripts/: camouflage_pattern_detector.py  precision_landing_controller.py  red_pattern_detector.py  simple_landing_detector.py  test_multi_pattern.py
workspace/perception/: README.md  README_YOLO_INFERENCE.md  README_dual_detection.md  YOLO_FEATURE_EXTENSION.md  camera_transform_config.py  generate_rviz_config.py  launch_yolo_inference.py  point_set_viewer.py  pointcloud_analyzer.py  yolo11_inference.launch  yolo11_inference.py  yolo11_inference_example.launch  yolo11_pointcloud_visualization.rviz
workspace/perception/config/: color_detection_config.yaml
workspace/perception/launch/: yolo_color_detection.launch
workspace/perception/scripts/: switch_detection_method.py  test_color_detection.py
workspace/precision_landing/: start_demo.sh
workspace/precision_landing/scripts/: precision_landing_controller.py  test_precision_landing.py  visual_servo_controller.py
workspace/src/: CMakeLists.txt
workspace/src/iris_control/: CMakeLists.txt  README_PID_TUNING.md  README_landing.md  README_visual_landing.md  VISUAL_LANDING_README.md  package.xml  start_landing.sh
workspace/src/iris_control/config/: multirotor_pid_params.yaml
workspace/src/iris_control/launch/: README.md  multi_drone.launch  multirotor_control.launch  multirotor_with_pid_tuning.launch  visual_landing_demo.launch
workspace/src/iris_control/scripts/: drone_control.py  landing.py  multirotor_control.py  pid_tuner.py
workspace/src/landing_detection/: CMakeLists.txt  landing_detection.launch  landing_detection.py
workspace/src/landing_detection/launch/: camouflage_detection.launch  multi_pattern_detection.launch
workspace/src/landing_detection/scripts/: camouflage_pattern_detector.py  red_pattern_detector.py  test_landing_detection.py
workspace/src/perception/: CMakeLists.txt  package.xml
workspace/src/perception/config/: yolo11_config.yaml
workspace/src/perception/launch/: README.md  yolo11_debug.launch  yolo11_inference.launch  yolo11_iris.launch  yolo11_vtol.launch  yolo_color_detection.launch
workspace/src/perception/scripts/: simple_test.py  test_average_position_feature.py  test_yolo_functionality.py  yolo11_inference.py
workspace/src/perception_yolov12/: CMakeLists.txt  README.md  package.xml
workspace/src/perception_yolov12/launch/: multi_uav_yolov12.launch  yolov12.launch  yolov12_iris.launch  yolov12_vtol.launch
workspace/src/perception_yolov12/scripts/: yolo12_bridge_node.py  yolo12_inference.py
workspace/src/precision_landing/: CMakeLists.txt  README.md  package.xml
workspace/src/precision_landing/launch/: precision_landing.launch  test_precision_landing.launch
workspace/src/precision_landing/scripts/: landing_state_machine.py
workspace/src/tf_transform/: CMakeLists.txt  README.md  package.xml
workspace/src/tf_transform/launch/: mavros_pose_to_tf.launch  mavros_pose_to_tf_debug.launch  multi_uav_tf.launch  static_tf_publishers.launch
workspace/src/tf_transform/scripts/: mavros_pose_to_tf.py
workspace/src/vtol_control/: CMakeLists.txt  package.xml  vtol_condition.md
workspace/src/vtol_control/launch/: README.md  vtol_demo.launch  vtol_demo_simple.launch  vtol_demo_sitl.launch
workspace/src/vtol_control/scripts/: CONDITION_TIMER_README.md  get_person_positions.py  test_basic.py  test_condition_timer.py  vtol_Astar.py  vtol_demo.py  vtol_fly.py  vtol_ros.py
workspace/src/workspace_utils/: CMakeLists.txt  README.md  package.xml
workspace/src/workspace_utils/launch/: zhihang2025_fixed.launch
workspace/src/workspace_utils/scripts/: start.sh  start_optimized_example.sh
workspace/tf_transform/: camera_tf_publishers.launch
workspace/vtol_control/: image_capture.py  test_modules.py  test_navigation.py  vtol_demo.py  vtol_demo_debug.py  vtol_map.py  vtol_target.yaml
workspace/yolo_train/: train_yolo_example.py
yolov12_debug/: yolo_bridge_node.py  yolo_inference.py
zhihang2025/: zhihang2025.launch  zhihang2025.world
zhihang2025/iris_zhihang/: iris_zhihang.sdf
zhihang2025/landing2/meshes/: red.dae  white.dae  yellow.dae
zhihang2025/standard_vtol/: standard_vtol.sdf
zhihang2025/target_green/meshes/: brown.dae
